<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SiA for Healthy Lungs</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="danish">Danish</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="firstname">First Name *</string>
    <string name="lastname">Last Name *</string>
    <string name="emailid">Email ID *</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confrirm_password">Confirm Password</string>
    <string name="welcome">Welcome!</string>
    <string name="let_s_get_you_signed_in">Let\'s get you signed in!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">- Sign Up</string>
    <string name="please_provide_the_details_for">Please provide the details for</string>
    <string name="your_new_account">your new account.</string>
    <string name="by_creating_your_account_you_agree_with_to">By creating your account you agree with to</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="bsign_up">Sign Up</string>
    <string name="resend">Resend</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify">Verify</string>
    <string name="thank_you">Thank You</string>
    <string name="you_have_successfully_registered">You have successfully registered!</string>
    <string name="complete_your_profile">Complete your profile(1/3)</string>
    <string name="complete_your_profile2">Complete your profile(2/3)</string>
    <string name="complete_your_profile3">Complete your profile(3/3)</string>
    <string name="Frank_M_Browning">Frank M. Browning</string>
    <string name="profile_info">Profile Info</string>
    <string name="medical_info">Medical Info</string>
    <string name="lifestyle_info">Lifestyle Info</string>
    <string name="user_id">User ID</string>
    <string name="name">Name</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="enter_your_emmergency_mobile_no">Enter Your Emergency Mobile No</string>
    <string name="select_your_age">Enter Your Age(yrs)</string>
    <string name="select_your_height">Enter Your Height (cm)</string>
    <string name="select_your_weight">Enter Your Weight(kg)</string>
    <string name="select_your_genderr">Select Your Gender</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="select_your_ethnicity">Select Your Ethnicity</string>
    <string name="specify">Specify</string>
    <string name="enter">Enter</string>
    <string name="my_diagnosis">My Diagnosis</string>
    <string name="COPD">COPD</string>
    <string name="other_than_Asthma_or_COPD_do_you_have_any_medical_condition_diagnosed">Other than Asthma or COPD, do you have any medical condition diagnosed?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="are_you_on_any_regular_medication_for_the_above_mentioned_condition">Are you on any regular medication for the above-mentioned condition?</string>
    <string name="select_your_symptoms">Select Your Symptoms</string>
    <string name="Select">Select</string>
    <string name="select_your_triggers">Select Your Triggers</string>
    <string name="enter_other_observation">Enter Other Observation</string>
    <string name="are_you_were_a_smoker">Are were/you a smoker?</string>
    <string name="are_you_were_a_tobacco_or_other_nicotine_user">Are were/you a tobacco or other nicotine user?</string>
    <string name="how_often_do_you_exercise_or_go_for_walking">How often do you exercise or go for walking?</string>
    <string name="Save">Save</string>
    <string name="good_morning_Frank">Welcome </string>
    <string name="add_your_daily_zone">Add Your Daily Zone</string>
    <string name="all_action_plans">All Action plans</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="Red">Red</string>
    <string name="Weather">Weather</string>
    <string name="air_quality">Air Quality</string>
    <string name="allergy_outlook">Allergy Outlook</string>
    <string name="daily_tips">Daily Tips</string>
    <string name="wear_weather_appropriate_clothing">Wear weather appropriate clothing</string>
    <string name="take_your_preventor_inhaler_with_you">Take your preventor inhaler with you</string>
    <string name="current_weather">Current Weather</string>
    <string name="current_air_quality">Current Air Quality</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="a_verification_email_has_been_sent_to_your_inbox" translatable="false">You will receive a verification code via email</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="send">Send</string>
    <string name="back_to_Sign_In">Back to Sign In</string>
    <string name="Resend">Resend</string>
    <string name="Reset">Reset</string>
    <string name="your_password_has_been">Your password has been</string>
    <string name="successfully_reset">successfully reset</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string-array name="Gender">
        <item> Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Prefer Not To Say</item>
    </string-array>
    <string-array name="smoker">
        <item> Select</item>
        <item>Regular</item>
        <item>Occasional</item>
        <item>Ex-Smoker</item>

    </string-array>
    <string-array name="smoker1">
        <item> Select</item>
        <item>Regular</item>
        <item>Occasional</item>
        <item>Ex-User</item>

    </string-array>
    <string-array name="smokerfrequency">
        <item> Select</item>
        <item>Everyday</item>
        <item>Some Days Of The Week</item>
        <item>Once A Week</item>
        <item>Never</item>

    </string-array>
    <string name="Asthma">Asthma</string>
    <string name="add_my_action_plan">My Action Plan</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="about_Sia_App">About Sia App</string>
    <string name="Logout">Logout</string>
    <string name="version">Version-0.0.60</string>
    <string name="great_job">Great job!</string>
    <string name="you_have_successfully_recorded_your_symptoms_and_lung_test_values">You have successfully recorded your symptoms and Lung function</string>
    <string name="my_daily_zone">My Daily Zone</string>
    <string name="my_daily_zone_is">My Daily Zone is</string>
    <string name="Daily_Zone">Daily Zone</string>
    <string name="My_Action_Plan">My Action Plan</string>
    <string name="add_action_plan">Add Action Plan</string>
    <string name="green_zone">Green Zone</string>
    <string name="add_daily_medications">Add Daily Medications</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="enter_number_of_puffs">Enter Number of Puffs</string>
    <string name="when_to_take">Please select frequency of taking Medicine</string>
    <string name="morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Evening">Evening</string>
    <string name="Night">Night</string>
    <string name="Add_More">+Add More</string>
    <string name="Yellow_Zone">Yellow Zone</string>
    <string name="Red_Zone">Red Zone</string>
    <string name="ok1">Ok</string>
    <string name="Action_Plan_added_successfully">Action Plan added successfully</string>
    <string name="my_readings">My Readings</string>
    <string name="mini_lung_function_test">Mini Lung Function Test</string>
    <string name="Peak_Flow_Meter">Peak Flow Meter</string>
    <string name="Spirometer">Spirometer</string>
    <string name="my_symptoms">My Symptoms</string>
    <string name="Select_one_of_the_following">Select one of the following :</string>
    <string name="FEV1">FEV1(L) *</string>
    <string name="FVC">FVC(L)</string>
    <string name="SpO2">SpO2(%)</string>
    <string name="Temperature">Temperature(F)</string>
    <string name="Pulse_Rate">Pulse Rate(bpm)</string>
    <string name="PEF">PEF(%) *</string>
    <string name="profile">Profile</string>
    <string name="Select_Zone">Select Zone</string>
    <string name="trouble_walking_and_talking_due_to_shortness_of_breath">Trouble walking and talking due to shortness of breath?</string>
    <string name="your_lips_or_fingernails_are_turning_blue">Your lips or fingernails are turning blue?</string>
    <string name="call_Hospital_Emergency_1813">Call Hospital Emergency 1813</string>
    <string name="if_you_are_still_in_Red_Zone_after_15minutesoftakingrelievermedicationnotabletoreachhospitalemergency"><![CDATA[If you are still in Red Zone after 15 minutes of taking reliever medication & not able to reach hospital emergency]]></string>
    <string name="call_for_an_Ambulance_112">Call for an Ambulance 112</string>
    <string name="daily">Daily</string>
    <string name="rescue">Rescue</string>
    <string name="your_oral_corsticosteroid_tablet">Your Oral Corticosteroid tablet</string>
    <string name="oral_Corticosteroid_tablet">Oral Corticosteroid tablet</string>
    <string name="go_to_Action_Plan">Go to Action Plan</string>
    <string name="Add_More_Medicine">+Add More Medicine</string>
    <string name="Your_medication_is_added_for">Your medication is added for green zone.</string>
    <string name="addMedications">Add Medications</string>
    <string name="created_by_myself">Created by Myself</string>
    <string name="created_by_Dr">Created by</string>
    <string name="no_action_plan_available_yet">No action plan available yet.</string>
    <string name="no_action_plan_added_yet">No Action Plan added yet</string>
    <string name="no_plan_available_yet">No action plan available yet.</string>
    <string name="medications">Medications</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="Verify_Email_ID">Verify Email ID</string>
    <string name="Daily_zone_isnotaddedyet">Daily zone is not added yet</string>
    <string name="Date">4 March 2022</string>
    <string name="setdate">Set Date</string>
    <string name="enter_Number_Dose">Enter Number  Dose (mg)</string>
    <string name="InternetConnection">Internet Connection</string>
    <string name="PleaseCheckYourInternetConnection">Please Check Your Internet Connection</string>
    <string name="InvalidEmailId">Invalid e-mail Id</string>
    <string name="EnterPassword"> Enter password</string>
    <string name="InvalidEmailorpassword">Invalid Email or password</string>
    <string name="Loginfailed">Login failed</string>
    <string name="EnterEmailId">Enter e-mail Id </string>
    <string name="Invalidcode">Invalid password</string>
    <string name="EnterConfirmPassword">Confirm Password</string>
    <string name="Home">Home</string>
    <string name="Dailydiary">Daily Diary</string>
    <string name="Profile">Profile</string>
    <string name="enter_medicine_name_that_you_missed">Enter Medicine Name that you missed</string>
    <string name="select_number_of_puffs_you_missed">Select Number of Puffs you missed</string>
    <string name="select_time_that_you_missed">Select time that you missed</string>
    <string name="FindAirONE">FindAir ONE</string>
    <string name="connect">Connect</string>
    <string name="PlaceFindAirONEdeviceinthecircleabove">PlaceFindAir ONE device in the circle above</string>
    <string name="Searchingforthedevice">Searching For The Decives</string>
</resources>