<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Front_End.UI.SignInActivity">


     <include layout="@layout/blanktoolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen2dp"
        android:background="@color/divider"
        android:backgroundTint="@color/divider"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/dimen10dp"
                android:gravity="center|top"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/Headline_Black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:gravity="center"
                android:text="@string/let_s_get_you_signed_in"
                android:textColor="@color/Textblack"
                android:textSize="@dimen/HeadingText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:src="@drawable/logo" />

        </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen15dp"
            android:layout_marginRight="@dimen/dimen15dp"
            android:orientation="vertical">




            <EditText
                android:id="@+id/editUSERNAME"
                android:drawableLeft="@drawable/custommail"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen51dp"
                android:layout_marginTop="@dimen/dimen40dp"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:background="@drawable/edit_text_selector"
                android:focusable="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dimen15dp"
                android:textColor="@color/Textblack"
                android:textColorHint="@color/Placeholder" />

                    <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:passwordToggleTint="@color/TextBlue"
                                 app:passwordToggleEnabled="true"
                                android:textColorHint="@color/TextBlue"
                                app:hintEnabled="false">



                                <EditText
                                    android:id="@+id/editPassword"
                                    android:drawableStart="@drawable/customlock"
                                    android:drawablePadding="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/dimen51dp"
                                    android:layout_marginBottom="@dimen/dimen10dp"
                                    android:background="@drawable/edit_text_selector"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:paddingLeft="@dimen/dimen15dp"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/Placeholder" />

                            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/txtForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dimen10dp"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/Textblack"
                android:textSize="@dimen/Text"/>


            <Button
                android:id="@+id/butLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45dp"
                android:layout_marginTop="@dimen/dimen50dp"
                android:background="@drawable/buttonshape"
                android:text="@string/sign_in"
                android:layout_marginLeft="@dimen/dimen5dp"
                android:layout_marginRight="@dimen/dimen5dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/Button_Background"
                android:textColor="@color/white" />



            <LinearLayout
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen20dp"
                android:layout_marginBottom="@dimen/dimen15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen2dp"
                    android:textSize="13sp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtSignUP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen2dp"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textSize="@dimen/Text"
                    android:textColor="@color/Headline_Black" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


